--- a/LANParty/LANParty.Windows/Pages/CreateParty.xaml
+++ b/LANParty/LANParty.Windows/Pages/CreateParty.xaml
@@ -1,6 +1,6 @@
 ﻿<Page
     x:Name="pageRoot"
-    x:Class="LANParty.Pages.MainPage"
+    x:Class="LANParty.Pages.CreateParty"
     DataContext="{Binding DefaultViewModel, RelativeSource={RelativeSource Self}}"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -43,19 +43,19 @@
                         AutomationProperties.Name="Back"
                         AutomationProperties.AutomationId="BackButton"
                         AutomationProperties.ItemType="Navigation Button"/>
-            <TextBlock x:Name="pageTitle" Text="Login" Style="{StaticResource HeaderTextBlockStyle}" Grid.Column="1" 
+            <TextBlock x:Name="pageTitle" Text="Create Party" Style="{StaticResource HeaderTextBlockStyle}" Grid.Column="1" 
                         IsHitTestVisible="false" TextWrapping="NoWrap" VerticalAlignment="Bottom" Margin="0,0,30,40"/>
         </Grid>
         <Grid Grid.Row="1">
             <StackPanel>
-                <TextBox Name="username" Text="Gosho"></TextBox>
-                <TextBox Name="password" Text="pass"></TextBox>
-                <Button Content="Login" Click="Button_Click_1"></Button>
-                <Button Content="Register" Click="Button_Click"></Button>
-                <TextBlock Name="log" Text="log"></TextBlock>
+                <TextBox Name="title" Text="Title"></TextBox>
+                <TextBox Name="description" Text="Description"></TextBox>
+                <StackPanel Orientation="Horizontal">
+                    <TimePicker  Name="timePicker"></TimePicker>
+                    <DatePicker Margin="20 0 0 0" Name="datePicker" ></DatePicker>
+                </StackPanel>
+                <Button  Content="Go" Click="Button_Click"></Button>
             </StackPanel>
         </Grid>
-
     </Grid>
-    
 </Page>
