--- a/LANParty/LANParty.Windows/Pages/ProfilePage.xaml
+++ b/LANParty/LANParty.Windows/Pages/ProfilePage.xaml
@@ -48,8 +48,10 @@
         </Grid>
         <Grid Grid.Row="1">
             <StackPanel>
+                <Image Name="profilePic" Height="100" Width="100" HorizontalAlignment="Left" Source="ms-appx:///Assets/DefaultProfilePic.jpg"></Image>
                 <TextBlock FontSize="25" Name="username" Text="Name here"></TextBlock>
                 <Button Content="Create Party" Click="Button_Click"></Button>
+                <Button Content="Edit Profile" Click="Edit_Profile_Click"></Button>
             </StackPanel>
         </Grid>
     </Grid>
