--- a/LANParty/LANParty.Windows/Pages/PartiesSearch.xaml
+++ b/LANParty/LANParty.Windows/Pages/PartiesSearch.xaml
@@ -47,7 +47,10 @@
                         IsHitTestVisible="false" TextWrapping="NoWrap" VerticalAlignment="Bottom" Margin="0,0,30,40"/>
         </Grid>
         <Grid Grid.Row="1">
-            <Button Content="asd" Click="Button_Click"></Button>
+            <StackPanel>
+                <Button Content="asd" Click="Button_Click"></Button>
+                <ItemsControl ItemsSource="{Binding Parties}" DisplayMemberPath="Title"></ItemsControl>
+            </StackPanel>
         </Grid>
     </Grid>
 </Page>
