--- a/LANParty/LANParty.Windows/Pages/CreatedPartiesPage.xaml
+++ b/LANParty/LANParty.Windows/Pages/CreatedPartiesPage.xaml
@@ -1,6 +1,6 @@
 ﻿<Page
     x:Name="pageRoot"
-    x:Class="LANParty.Pages.ProfilePage"
+    x:Class="LANParty.Pages.CreatedPartiesPage"
     DataContext="{Binding DefaultViewModel, RelativeSource={RelativeSource Self}}"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -8,13 +8,11 @@
     xmlns:common="using:LANParty.Common"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:converters="using:LANParty.Converters"
     mc:Ignorable="d">
 
     <Page.Resources>
         <!-- TODO: Delete this line if the key AppName is declared in App.xaml -->
         <x:String x:Key="AppName">My Application</x:String>
-        <converters:ParseFileToBitmapImageConverter x:Name="ParseConverter"></converters:ParseFileToBitmapImageConverter>
     </Page.Resources>
 
     <!--
@@ -45,17 +43,22 @@
                         AutomationProperties.Name="Back"
                         AutomationProperties.AutomationId="BackButton"
                         AutomationProperties.ItemType="Navigation Button"/>
-            <TextBlock x:Name="pageTitle" Text="Profile" Style="{StaticResource HeaderTextBlockStyle}" Grid.Column="1" 
+            <TextBlock x:Name="pageTitle" Text="{StaticResource AppName}" Style="{StaticResource HeaderTextBlockStyle}" Grid.Column="1" 
                         IsHitTestVisible="false" TextWrapping="NoWrap" VerticalAlignment="Bottom" Margin="0,0,30,40"/>
         </Grid>
+
         <Grid Grid.Row="1">
             <StackPanel>
-                <Image Name="profilePic" Height="100" Width="100" HorizontalAlignment="Left" Source="{Binding ProfilePic, Converter={StaticResource ParseConverter}}"></Image>
-                <TextBlock FontSize="25" Name="username" Text="{Binding Username}" ></TextBlock>
-                <Button Content="Create Party" Click="Button_Click"></Button>
-                <Button Content="Edit Profile" Click="Edit_Profile_Click"></Button>
-                <Button Content="Search for party" Click="Button_Click_1"></Button>
-                <Button Content="Parites Created" Click="Button_Click_2"></Button>
+                <ListView ItemsSource="{Binding Parties}"
+                         >
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <StackPanel>
+                                <TextBlock FontSize="25" Text="{Binding Title}"></TextBlock>
+                            </StackPanel>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
             </StackPanel>
         </Grid>
     </Grid>
