--- a/LANParty/LANParty.Windows/Pages/ProfilePage.xaml
+++ b/LANParty/LANParty.Windows/Pages/ProfilePage.xaml
@@ -56,6 +56,7 @@
                 <Button Content="Edit Profile" Click="Edit_Profile_Click"></Button>
                 <Button Content="Search for party" Click="Button_Click_1"></Button>
                 <Button Content="Parites Created" Click="Button_Click_2"></Button>
+                <Button Content="Parties Joined" Click="Button_Click_3"></Button>
             </StackPanel>
         </Grid>
     </Grid>
