--- a/LANParty/LANParty.Windows/Pages/PartyDetailsPage.xaml
+++ b/LANParty/LANParty.Windows/Pages/PartyDetailsPage.xaml
@@ -8,11 +8,14 @@
     xmlns:common="using:LANParty.Common"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:converters="using:LANParty.Converters"
+
     mc:Ignorable="d">
 
     <Page.Resources>
         <!-- TODO: Delete this line if the key AppName is declared in App.xaml -->
         <x:String x:Key="AppName">My Application</x:String>
+        <converters:ParseFileToBitmapImageConverter x:Name="ParseConverter"></converters:ParseFileToBitmapImageConverter>
     </Page.Resources>
 
     <!--
@@ -49,13 +52,15 @@
         
         <Grid Grid.Row="1">
             <StackPanel>
-                <TextBlock Text="{Binding Title}"></TextBlock>
+                <TextBlock FontSize="25" Text="{Binding Title}"></TextBlock>
+                <TextBlock FontSize="25" Text="{Binding Description}"></TextBlock>
                 <ListView ItemsSource="{Binding Users}"
                           IsItemClickEnabled="True"
                           ItemClick="ListView_ItemClick">
                     <ListView.ItemTemplate>
                         <DataTemplate>
-                            <StackPanel>
+                            <StackPanel Orientation="Horizontal">
+                                <Image Name="profilePic" Height="100" Width="100" HorizontalAlignment="Left" Source="{Binding ProfilePic, Converter={StaticResource ParseConverter}}"></Image>
                                 <TextBlock FontSize="25" Text="{Binding Username}"></TextBlock>
                             </StackPanel>
                         </DataTemplate>
