Converter moved to app resources

--- a/LANParty/LANParty.Windows/Pages/PartiesSearch.xaml
+++ b/LANParty/LANParty.Windows/Pages/PartiesSearch.xaml
@@ -50,7 +50,9 @@
             <StackPanel>
                 <ListView ItemsSource="{Binding Parties}"
                           IsItemClickEnabled="True"
-                          ItemClick="ListView_ItemClick">
+                          ItemClick="ListView_ItemClick"
+                          ManipulationMode="All"
+                          >
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <StackPanel>
