--- a/LANParty/LANParty.Shared/App.xaml
+++ b/LANParty/LANParty.Shared/App.xaml
@@ -2,5 +2,9 @@
     x:Class="LANParty.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="using:LANParty.Converters"
     xmlns:local="using:LANParty">
+    <Application.Resources>
+        <converters:ParseFileToBitmapImageConverter x:Name="ParseFileToBitmapImageConverter"></converters:ParseFileToBitmapImageConverter>
+    </Application.Resources>
 </Application>
