--- a/LANParty/LANParty.Windows/Pages/ProfileVisitorPage.xaml
+++ b/LANParty/LANParty.Windows/Pages/ProfileVisitorPage.xaml
@@ -49,8 +49,15 @@
         
         <Grid Grid.Row="1">
             <StackPanel>
-                <Image Name="profilePic" Height="100" Width="100" HorizontalAlignment="Left" Source="{Binding ProfilePic, Converter={StaticResource ParseFileToBitmapImageConverter}}"></Image>
-                <TextBlock FontSize="25" Name="username" Text="{Binding Username}" ></TextBlock>
+                <Image Name="profilePic" 
+                       Height="100" 
+                       Width="100"
+                       HorizontalAlignment="Left" 
+                       Source="{Binding ProfilePic, Converter={StaticResource ParseFileToBitmapImageConverter}}"></Image>
+                <TextBlock FontSize="25" 
+                           Name="username" 
+                           Text="{Binding Username}"></TextBlock>
+                <Button Content="Send Message" Click="Button_Click"></Button>
             </StackPanel>
         </Grid>
     </Grid>
