--- a/LANParty/LANParty.Windows/Pages/InboxPage.xaml
+++ b/LANParty/LANParty.Windows/Pages/InboxPage.xaml
@@ -1,6 +1,6 @@
 ﻿<Page
     x:Name="pageRoot"
-    x:Class="LANParty.Pages.ProfilePage"
+    x:Class="LANParty.Pages.InboxPage"
     DataContext="{Binding DefaultViewModel, RelativeSource={RelativeSource Self}}"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -43,19 +43,22 @@
                         AutomationProperties.Name="Back"
                         AutomationProperties.AutomationId="BackButton"
                         AutomationProperties.ItemType="Navigation Button"/>
-            <TextBlock x:Name="pageTitle" Text="Profile" Style="{StaticResource HeaderTextBlockStyle}" Grid.Column="1" 
+            <TextBlock x:Name="pageTitle" Text="{StaticResource AppName}" Style="{StaticResource HeaderTextBlockStyle}" Grid.Column="1" 
                         IsHitTestVisible="false" TextWrapping="NoWrap" VerticalAlignment="Bottom" Margin="0,0,30,40"/>
         </Grid>
+
         <Grid Grid.Row="1">
             <StackPanel>
-                <Image Name="profilePic" Height="100" Width="100" HorizontalAlignment="Left" Source="{Binding ProfilePic, Converter={StaticResource ParseFileToBitmapImageConverter}}"></Image>
-                <TextBlock FontSize="25" Name="username" Text="{Binding Username}" ></TextBlock>
-                <Button Content="Inbox" Click="Button_Click_4"></Button>
-                <Button Content="Create Party" Click="Button_Click"></Button>
-                <Button Content="Edit Profile" Click="Edit_Profile_Click"></Button>
-                <Button Content="Search for party" Click="Button_Click_1"></Button>
-                <Button Content="Parites Created" Click="Button_Click_2"></Button>
-                <Button Content="Parties Joined" Click="Button_Click_3"></Button>
+                <ListView ItemsSource="{Binding Messages}"
+                          >
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <StackPanel>
+                                <TextBlock FontSize="25" Text="{Binding Title}"></TextBlock>
+                            </StackPanel>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
             </StackPanel>
         </Grid>
     </Grid>
