--- a/LANParty/LANParty.Windows/Pages/ManageApplicationsPage.xaml
+++ b/LANParty/LANParty.Windows/Pages/ManageApplicationsPage.xaml
@@ -49,10 +49,13 @@
 
         <Grid Grid.Row="1">
             <StackPanel>
-                <ListView ItemsSource="{Binding Users}">
+                <ListView ItemsSource="{Binding Users}"
+                          IsItemClickEnabled="True"
+                          ItemClick="ListView_ItemClick">
                     <ListView.ItemTemplate>
                         <DataTemplate>
-                            <StackPanel>
+                            <StackPanel Orientation="Horizontal">
+                                <Image Name="profilePic" Height="100" Width="100" HorizontalAlignment="Left" Source="{Binding ProfilePic, Converter={StaticResource ParseFileToBitmapImageConverter}}"></Image>
                                 <TextBlock FontSize="25" Text="{Binding Username}"></TextBlock>
                             </StackPanel>
                         </DataTemplate>
