--- a/LANParty/LANParty.Windows/Pages/RegisterPage.xaml
+++ b/LANParty/LANParty.Windows/Pages/RegisterPage.xaml
@@ -48,10 +48,10 @@
         </Grid>
         <Grid Grid.Row="1">
             <StackPanel>
-                <TextBox Name="email" Text="asd@asd.bg"></TextBox>
-                <TextBox Name="username" Text="Gosho"></TextBox>
-                <TextBox Name="passowrd" Text="pass"></TextBox>
-                <Button Content="Register" Click="Register_Click"></Button>
+                <TextBox Name="email" Text="{Binding Email, Mode=TwoWay}" ></TextBox>
+                <TextBox Name="username" Text="{Binding Username, Mode=TwoWay}"></TextBox>
+                <TextBox Name="passowrd" Text="{Binding Password, Mode=TwoWay}"></TextBox>
+                <Button Content="Register" Command="{Binding Register}"></Button>
             </StackPanel>
            
         </Grid>
