--- a/LANParty/LANParty.Windows/Pages/MainPage.xaml
+++ b/LANParty/LANParty.Windows/Pages/MainPage.xaml
@@ -48,9 +48,9 @@
         </Grid>
         <Grid Grid.Row="1">
             <StackPanel>
-                <TextBox Name="username" Text="Gosho"></TextBox>
-                <TextBox Name="password" Text="pass"></TextBox>
-                <Button Content="Login" Click="Button_Click_1"></Button>
+                <TextBox Name="username" Text="{Binding Username, Mode=TwoWay}"></TextBox>
+                <TextBox Name="password" Text="{Binding Password, Mode=TwoWay}"></TextBox>
+                <Button Content="Login" Command="{Binding Login}"></Button>
                 <Button Content="Register" Click="Button_Click"></Button>
                 <Button Content="DO SHIT" Click="Button_Click_2"></Button>
                 <TextBlock Name="log" Text="log"></TextBlock>
