--- a/LANParty/LANParty.Windows/Pages/PartyDetailsPage.xaml
+++ b/LANParty/LANParty.Windows/Pages/PartyDetailsPage.xaml
@@ -49,21 +49,21 @@
 
         <Grid Grid.Row="1">
             <StackPanel>
-                <TextBlock FontSize="25" Text="{Binding Title}"></TextBlock>
-                <TextBlock FontSize="25" Text="{Binding Description}"></TextBlock>
+                <TextBlock FontSize="25" Text="{Binding Title, Mode=TwoWay}"></TextBlock>
+                <TextBlock FontSize="25" Text="{Binding Description, Mode=TwoWay}"></TextBlock>
                 <ListView ItemsSource="{Binding Users}"
                           IsItemClickEnabled="True"
                           ItemClick="ListView_ItemClick">
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
-                                <Image Name="profilePic" Height="100" Width="100" HorizontalAlignment="Left" Source="{Binding ProfilePic, Converter={StaticResource ParseFileToBitmapImageConverter}}"></Image>
-                                <TextBlock FontSize="25" Text="{Binding Username}"></TextBlock>
+                                <Image Name="profilePic" Height="100" Width="100" HorizontalAlignment="Left" Source="{Binding ProfilePic, Converter={StaticResource ParseFileToBitmapImageConverter}, Mode=TwoWay}"></Image>
+                                <TextBlock FontSize="25" Text="{Binding Username, Mode=TwoWay}"></TextBlock>
                             </StackPanel>
                         </DataTemplate>
                     </ListView.ItemTemplate>
                 </ListView>
-                <Button Content="Apply" Click="Button_Click"></Button>
+                <Button Content="Apply" Command="{Binding Apply}"></Button>
             </StackPanel>
         </Grid>
     </Grid>
