--- a/LANParty/LANParty.Windows/Pages/ProfilePage.xaml
+++ b/LANParty/LANParty.Windows/Pages/ProfilePage.xaml
@@ -55,13 +55,14 @@
                        Source="{Binding ProfilePic, Converter={StaticResource ParseFileToBitmapImageConverter}}"></Image>
                 <TextBlock FontSize="25" 
                            Name="username"
-                           Text="{Binding Username}" ></TextBlock>
+                           Text="{Binding Username, Mode=TwoWay}" ></TextBlock>
                 <Button Content="Inbox" Click="Button_Click_4"></Button>
                 <Button Content="Create Party" Click="Button_Click"></Button>
                 <Button Content="Edit Profile" Click="Edit_Profile_Click"></Button>
                 <Button Content="Search for party" Click="Button_Click_1"></Button>
                 <Button Content="Parites Created" Click="Button_Click_2"></Button>
                 <Button Content="Parties Joined" Click="Button_Click_3"></Button>
+                <Button Content="Logout" Command="{Binding Logout}"></Button>
             </StackPanel>
         </Grid>
     </Grid>
