--- a/LANParty/LANParty.Windows/Pages/ManageApplicationsPage.xaml
+++ b/LANParty/LANParty.Windows/Pages/ManageApplicationsPage.xaml
@@ -50,8 +50,11 @@
         <Grid Grid.Row="1">
             <StackPanel>
                 <ListView ItemsSource="{Binding Users}"
-                          IsItemClickEnabled="True"
-                          ItemClick="ListView_ItemClick">
+                          IsItemClickEnabled="False"
+                          ItemClick="ListView_ItemClick"
+                          DragOver="ListView_DragOver"
+                          IsDoubleTapEnabled="True"
+                          DoubleTapped="ListView_DoubleTapped">
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
