--- a/LANParty/LANParty.Windows/Pages/ManageApplicationsPage.xaml
+++ b/LANParty/LANParty.Windows/Pages/ManageApplicationsPage.xaml
@@ -48,6 +48,7 @@
         </Grid>
 
         <Grid Grid.Row="1">
+            <ProgressRing IsActive="{Binding IsLoading, Mode=TwoWay}" Width="80" Height="80"></ProgressRing>
             <StackPanel>
                 <TextBlock Name="log"></TextBlock>
                 <ListView ItemsSource="{Binding Users}"
