--- a/LANParty/LANParty.Windows/Pages/PartiesSearch.xaml
+++ b/LANParty/LANParty.Windows/Pages/PartiesSearch.xaml
@@ -47,6 +47,7 @@
                         IsHitTestVisible="false" TextWrapping="NoWrap" VerticalAlignment="Bottom" Margin="0,0,30,40"/>
         </Grid>
         <Grid Grid.Row="1">
+            <ProgressRing IsActive="{Binding IsLoading, Mode=TwoWay}" Width="80" Height="80"></ProgressRing>
             <StackPanel>
                 <ListView ItemsSource="{Binding Parties}"
                           IsItemClickEnabled="True"
