--- a/LANParty/LANParty.Windows/Pages/ProfilePage.xaml
+++ b/LANParty/LANParty.Windows/Pages/ProfilePage.xaml
@@ -48,16 +48,21 @@
         </Grid>
         <Grid Grid.Row="1">
             <StackPanel>
-                <Image Name="profilePic" 
+                <StackPanel Orientation="Horizontal">
+                    <Image Name="profilePic" 
                        Height="100" 
                        Width="100" 
                        HorizontalAlignment="Left" 
                        Source="{Binding ProfilePic, Converter={StaticResource ParseFileToBitmapImageConverter}}"></Image>
-                <TextBlock FontSize="25" 
+                    <StackPanel>
+                    <TextBlock FontSize="25"
                            Name="username"
                            Text="{Binding Username, Mode=TwoWay}" ></TextBlock>
+                        <Button Content="Edit Profile" Click="Edit_Profile_Click"></Button>
+
+                    </StackPanel>
+                </StackPanel>
                 <Button Content="Create Party" Click="Button_Click"></Button>
-                <Button Content="Edit Profile" Click="Edit_Profile_Click"></Button>
                 <Button Content="Search for party" Click="Button_Click_1"></Button>
                 <Button Content="Parites Created" Click="Button_Click_2"></Button>
                 <Button Content="Parties Joined" Click="Button_Click_3"></Button>
