Fixed approving applications flow

--- a/LANParty/LANParty.Windows/Pages/CreatedPartiesPage.xaml
+++ b/LANParty/LANParty.Windows/Pages/CreatedPartiesPage.xaml
@@ -54,6 +54,8 @@
                 <ListView ItemsSource="{Binding Parties}"
                           IsItemClickEnabled="True"
                           ItemClick="ListView_ItemClick"
+                          IsDoubleTapEnabled="True"
+                          DoubleTapped="ListView_DoubleTapped"
                          >
                     <ListView.ItemTemplate>
                         <DataTemplate>
