--- a/LANParty/LANParty.Windows/Pages/MainPage.xaml
+++ b/LANParty/LANParty.Windows/Pages/MainPage.xaml
@@ -44,6 +44,7 @@
                 <TextBox Name="password" Text="{Binding Password, Mode=TwoWay}"></TextBox>
                 <Button Content="Login" Command="{Binding Login}"></Button>
                 <Button Content="Register" Click="Button_Click"></Button>
+                <Button Content="Test" Click="Button_Click_1"></Button>
             </StackPanel>
         </Grid>
 
