--- a/LANParty/LANParty.Windows/Pages/FriendRequestsPage.xaml
+++ b/LANParty/LANParty.Windows/Pages/FriendRequestsPage.xaml
@@ -1,6 +1,6 @@
 ﻿<Page
     x:Name="pageRoot"
-    x:Class="LANParty.Pages.MainPage"
+    x:Class="LANParty.Pages.FriendRequestsPage"
     DataContext="{Binding DefaultViewModel, RelativeSource={RelativeSource Self}}"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -9,13 +9,20 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
-    
+
     <Page.Resources>
         <DataTemplate x:Key="DataTemplateGridViewFriendshipRequests">
             <local:FriendshipRequestUserControl />
         </DataTemplate>
+        <!-- TODO: Delete this line if the key AppName is declared in App.xaml -->
+        <x:String x:Key="AppName">My Application</x:String>
     </Page.Resources>
-   
+
+    <!--
+        This grid acts as a root panel for the page that defines two rows:
+        * Row 0 contains the back button and page title
+        * Row 1 contains the rest of the page layout
+    -->
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.ChildrenTransitions>
             <TransitionCollection>
@@ -39,20 +46,12 @@
                         AutomationProperties.Name="Back"
                         AutomationProperties.AutomationId="BackButton"
                         AutomationProperties.ItemType="Navigation Button"/>
-            <TextBlock x:Name="pageTitle" Text="Login" Style="{StaticResource HeaderTextBlockStyle}" Grid.Column="1" 
+            <TextBlock x:Name="pageTitle" Text="{StaticResource AppName}" Style="{StaticResource HeaderTextBlockStyle}" Grid.Column="1" 
                         IsHitTestVisible="false" TextWrapping="NoWrap" VerticalAlignment="Bottom" Margin="0,0,30,40"/>
         </Grid>
-        <Grid Grid.Row="1">
-            <ProgressRing IsActive="{Binding IsLoading, Mode=TwoWay}" Width="80" Height="80"></ProgressRing>
-            <StackPanel Margin="25,0,-25,0">
-                <TextBox Name="username" Text="{Binding Username, Mode=TwoWay}"></TextBox>
-                <TextBox Name="password" Text="{Binding Password, Mode=TwoWay}"></TextBox>
-                <Button Content="Login" Command="{Binding Login}"></Button>
-                <Button Content="Register" Click="Button_Click"></Button>
-                <Button Content="Test" Click="Button_Click_1"></Button>
-                <GridView x:Name="GridViewFriendshipRequests" Margin="100,100,0,50" ItemTemplate="{StaticResource DataTemplateGridViewFriendshipRequests}"/>
-            </StackPanel>
-        </Grid>
 
+        <Grid Grid.Row="1" Background="{StaticResource ApplicationPageBackgroundThemeBrush}">
+            <GridView x:Name="GridViewFriendshipRequests" Margin="100,100,0,50" ItemTemplate="{StaticResource DataTemplateGridViewFriendshipRequests}"/>
+        </Grid>
     </Grid>
 </Page>
