--- a/LANParty/LANParty.Windows/Pages/ProfilePage.xaml
+++ b/LANParty/LANParty.Windows/Pages/ProfilePage.xaml
@@ -51,6 +51,7 @@
                 <Button Content="Search for party" Click="Button_Click_1"></Button>
                 <Button Content="Created parties" Click="Button_Click_2"></Button>
                 <Button Content="Joined parties" Click="Button_Click_3"></Button>
+                <Button Content="Friend requests" Click="Button_Click_5"></Button>
             </StackPanel>
         </Grid>
     </Grid>
@@ -58,7 +59,7 @@
         <CommandBar IsOpen="True" IsSticky="True">
             <AppBarButton Label="Logout" Icon="ClosePane" Command="{Binding Logout}"/>
             <AppBarButton Label="Inbox" Icon="Mail" Click="Button_Click_4"/>
-            <AppBarButton Label="Friend List" Icon="People"/>
+            <AppBarButton Label="Friend List" Icon="People" Click="AppBarButton_Click"/>
         </CommandBar>
     </Page.BottomAppBar>
 </Page>
