--- a/LANParty/LANParty.Windows/Pages/FriendsPage.xaml
+++ b/LANParty/LANParty.Windows/Pages/FriendsPage.xaml
@@ -1,6 +1,6 @@
 ﻿<Page
     x:Name="pageRoot"
-    x:Class="LANParty.Pages.ProfileVisitorPage"
+    x:Class="LANParty.Pages.FriendsPage"
     DataContext="{Binding DefaultViewModel, RelativeSource={RelativeSource Self}}"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -10,7 +10,16 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-  
+    <Page.Resources>
+        <!-- TODO: Delete this line if the key AppName is declared in App.xaml -->
+        <x:String x:Key="AppName">My Application</x:String>
+    </Page.Resources>
+
+    <!--
+        This grid acts as a root panel for the page that defines two rows:
+        * Row 0 contains the back button and page title
+        * Row 1 contains the rest of the page layout
+    -->
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.ChildrenTransitions>
             <TransitionCollection>
@@ -40,17 +49,19 @@
 
         <Grid Grid.Row="1">
             <ProgressRing IsActive="{Binding IsLoading, Mode=TwoWay}" Width="80" Height="80"></ProgressRing>
-            <StackPanel>            
-                <Image Name="profilePic" 
-                       Height="100" 
-                       Width="100"
-                       HorizontalAlignment="Left" 
-                       Source="{Binding ProfilePic, Converter={StaticResource ParseFileToBitmapImageConverter}}"></Image>
-                <TextBlock FontSize="25" 
-                           Name="username" 
-                           Text="{Binding Username}"></TextBlock>
-                <Button Content="Send Message" Click="Button_Click"></Button>
-                <Button Content="Add to Friends" Command="{Binding FriendsAdd}"></Button>
+            <StackPanel>
+                <ListView ItemsSource="{Binding Users}"
+                          IsItemClickEnabled="True"
+                          ItemClick="ListView_ItemClick">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal">
+                                <Image Name="profilePic" Height="100" Width="100" HorizontalAlignment="Left" Source="{Binding ProfilePic, Converter={StaticResource ParseFileToBitmapImageConverter}, Mode=TwoWay}"></Image>
+                                <TextBlock FontSize="25" Text="{Binding Username, Mode=TwoWay}"></TextBlock>
+                            </StackPanel>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
             </StackPanel>
         </Grid>
     </Grid>
