--- a/LANParty/LANParty.Windows/Pages/ProfilePage.xaml
+++ b/LANParty/LANParty.Windows/Pages/ProfilePage.xaml
@@ -27,31 +27,32 @@
                 <ColumnDefinition Width="120"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            
-            <TextBlock x:Name="pageTitle" Text="{StaticResource AppName}" Style="{StaticResource HeaderTextBlockStyle}" Grid.Column="1" 
-                        IsHitTestVisible="false" TextWrapping="NoWrap" VerticalAlignment="Bottom" Margin="0,0,30,40"/>
+
+            <TextBlock x:Name="pageTitle" Text="{StaticResource AppName}" Style="{StaticResource HeaderTextBlockStyle}" 
+                        IsHitTestVisible="false" TextWrapping="NoWrap" VerticalAlignment="Bottom" Margin="10,0,140,46" Grid.ColumnSpan="2"/>
         </Grid>
         <Grid Grid.Row="1">
             <StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <Image Name="profilePic" 
-                       Height="100" 
-                       Width="100" 
+                       Margin="15 10 10 10"
+                       Height="150" 
+                       Width="150" 
                        HorizontalAlignment="Left" 
                        Source="{Binding ProfilePic, Converter={StaticResource ParseFileToBitmapImageConverter}}"></Image>
                     <StackPanel>
-                    <TextBlock FontSize="25"
-                           Name="username"
+                        <TextBlock FontSize="25"
+                                   Margin="15 25 0 0"
                            Text="{Binding Username, Mode=TwoWay}" ></TextBlock>
-                        <Button Content="Edit Profile" Click="Edit_Profile_Click"></Button>
-
+                        <Button Margin="10 20 0 0 " Style="{StaticResource ButtonProfile}" Content="Edit Profile" Click="Edit_Profile_Click"></Button>
                     </StackPanel>
                 </StackPanel>
-                <Button Content="Create Party" Click="Button_Click"></Button>
-                <Button Content="Search for party" Click="Button_Click_1"></Button>
-                <Button Content="Created parties" Click="Button_Click_2"></Button>
-                <Button Content="Joined parties" Click="Button_Click_3"></Button>
-                <Button Content="Friend requests" Click="Button_Click_5"></Button>
+                <Button Style="{StaticResource ButtonProfile}" Content="Search for party" Click="Button_Click_1"></Button>
+                <Button Style="{StaticResource ButtonProfile}" Content="Created parties" Click="Button_Click_2"></Button>
+                <Button Style="{StaticResource ButtonProfile}" Content="Joined parties" Click="Button_Click_3"></Button>
+                <Button Style="{StaticResource ButtonProfile}" Content="Friend requests" Click="Button_Click_5"></Button>
+                <Button Style="{StaticResource ButtonProfile}" Content="Create Party" Click="Button_Click"></Button>
+
             </StackPanel>
         </Grid>
     </Grid>
