--- a/LANParty/LANParty.Windows/Pages/ManageApplicationsPage.xaml
+++ b/LANParty/LANParty.Windows/Pages/ManageApplicationsPage.xaml
@@ -42,25 +42,20 @@
             <ProgressRing IsActive="{Binding IsLoading, Mode=TwoWay}" Width="80" Height="80"></ProgressRing>
             <StackPanel>
                 <TextBlock Name="log"></TextBlock>
-                <ListView ItemsSource="{Binding Users}"
+                <ListView ItemTemplate="{StaticResource BasicUserListViewTemplate}"
+                          ItemsSource="{Binding Users}"
                           IsItemClickEnabled="False"
                           ItemClick="ListView_ItemClick"
                           IsDoubleTapEnabled="True"
                           DoubleTapped="ListView_DoubleTapped"
                           IsHoldingEnabled="True"
                           Holding="ListView_Holding">
-                    <ListView.ItemTemplate>
-                        <DataTemplate>
-                            <StackPanel Orientation="Horizontal">
-                                <Image Name="profilePic" Height="100" Width="100" HorizontalAlignment="Left" Source="{Binding ProfilePic, Converter={StaticResource ParseFileToBitmapImageConverter}}"></Image>
-                                <TextBlock FontSize="25" Text="{Binding Username}"></TextBlock>
-                            </StackPanel>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
                 </ListView>
             </StackPanel>
         </Grid>
+        
     </Grid>
+    
     <Page.BottomAppBar>
         <CommandBar IsOpen="True" IsSticky="True">
             <AppBarButton Label="Profile" Icon="Contact" Click="AppBar_Profile_Click"/>
@@ -68,4 +63,5 @@
             <AppBarButton Label="Friends" Icon="People" Click="AppBar_Friends_Click"/>
         </CommandBar>
     </Page.BottomAppBar>
+    
 </Page>
