--- a/LANParty/LANParty.Windows/Pages/PartyDetailsPage.xaml
+++ b/LANParty/LANParty.Windows/Pages/PartyDetailsPage.xaml
@@ -48,23 +48,17 @@
                     <TextBlock FontSize="25" Text="{Binding Date}"></TextBlock>
                 </StackPanel>
                 <StackPanel>
-                    <ListView ItemsSource="{Binding Users}"
-                          IsItemClickEnabled="True"
-                          ItemClick="ListView_ItemClick">
-                        <ListView.ItemTemplate>
-                            <DataTemplate>
-                                <StackPanel Orientation="Horizontal">
-                                    <Image Name="profilePic" Height="100" Width="100" HorizontalAlignment="Left" Source="{Binding ProfilePic, Converter={StaticResource ParseFileToBitmapImageConverter}, Mode=TwoWay}"></Image>
-                                    <TextBlock FontSize="25" Text="{Binding Username, Mode=TwoWay}"></TextBlock>
-                                </StackPanel>
-                            </DataTemplate>
-                        </ListView.ItemTemplate>
+                    <ListView ItemTemplate="{StaticResource BasicUserListViewTemplate}"
+                              ItemsSource="{Binding Users}"
+                              IsItemClickEnabled="True"
+                              ItemClick="ListView_ItemClick">
                     </ListView>
                 </StackPanel>
                 <Button Content="Apply" Command="{Binding Apply}"></Button>
             </StackPanel>
         </Grid>
     </Grid>
+    
     <Page.BottomAppBar>
         <CommandBar IsOpen="True" IsSticky="True">
             <AppBarButton Label="Profile" Icon="Contact" Click="AppBar_Profile_Click"/>
@@ -72,4 +66,5 @@
             <AppBarButton Label="Friends" Icon="People" Click="AppBar_Friends_Click"/>
         </CommandBar>
     </Page.BottomAppBar>
+    
 </Page>
