--- a/LANParty/LANParty.Windows/Pages/PartyDetailsPage.xaml
+++ b/LANParty/LANParty.Windows/Pages/PartyDetailsPage.xaml
@@ -39,23 +39,28 @@
         </Grid>
 
         <Grid Grid.Row="1">
-            <ProgressRing IsActive="{Binding IsLoading, Mode=TwoWay}" Width="80" Height="80"></ProgressRing>
             <StackPanel>
                 <StackPanel DataContext="{Binding Party}">
-                    <TextBlock FontSize="25" Text="{Binding Title}"></TextBlock>
-                    <TextBlock FontSize="25" Text="{Binding Description}"></TextBlock>
-                    <TextBlock FontSize="25" Text="{Binding Spots}"></TextBlock>
-                    <TextBlock FontSize="25" Text="{Binding Date}"></TextBlock>
+                    <TextBlock Margin="15 15 0 0" FontSize="40" Text="{Binding Title}"></TextBlock>
+                    <TextBlock Margin="15 15 0 0" FontSize="25" Text="{Binding Description}"></TextBlock>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Margin="15 15 0 0" FontSize="25" Text="Spots left: "></TextBlock>
+                        <TextBlock Margin="10 15 0 0" FontSize="25" Text="{Binding Spots}"></TextBlock>
+                    </StackPanel>
+                    <TextBlock Margin="15 15 0 0" FontSize="25" Text="{Binding Date}"></TextBlock>
                 </StackPanel>
                 <StackPanel>
-                    <ListView ItemTemplate="{StaticResource BasicUserListViewTemplate}"
+                    <ListView Width="500"
+                              HorizontalAlignment="Left"
+                              ItemTemplate="{StaticResource BasicUserListViewTemplate}"
                               ItemsSource="{Binding Users}"
                               IsItemClickEnabled="True"
                               ItemClick="ListView_ItemClick">
                     </ListView>
                 </StackPanel>
-                <Button Content="Apply" Command="{Binding Apply}"></Button>
+                <Button Style="{StaticResource ButtonProfile}" Content="Apply" Command="{Binding Apply}"></Button>
             </StackPanel>
+            <ProgressRing  Foreground="Yellow" IsActive="{Binding IsLoading, Mode=TwoWay}" Width="80" Height="80"></ProgressRing>
         </Grid>
     </Grid>
     
