--- a/LANParty/LANParty.Windows/Pages/ChooseCategoryPage.xaml
+++ b/LANParty/LANParty.Windows/Pages/ChooseCategoryPage.xaml
@@ -39,13 +39,18 @@
 
         <Grid Grid.Row="1">
             <StackPanel>
-                <ComboBox Name="categoryComboBox"
+                <ComboBox Style="{StaticResource CategoryPickerComboBoxSmall}"
+                          HorizontalAlignment="Left"
+                          Name="categoryComboBox"
                           SelectedIndex="0">
                     <TextBlock Text="Dota2"></TextBlock>
                     <TextBlock Text="League Of Legends"></TextBlock>
+                    <TextBlock Text="CS:GO"></TextBlock>
                     <TextBlock Text="Other"></TextBlock>
                 </ComboBox>
-                <Button Content="Go" Click="Button_Click"></Button>
+                <Button Style="{StaticResource ButtonProfile}"
+                    Content="Go"
+                         Click="Button_Click"></Button>
             </StackPanel>
         </Grid>
     </Grid>
