--- a/LANParty/LANParty.Windows/Pages/InboxPage.xaml
+++ b/LANParty/LANParty.Windows/Pages/InboxPage.xaml
@@ -39,7 +39,6 @@
         </Grid>
 
         <Grid Grid.Row="1">
-            <ProgressRing IsActive="{Binding IsLoading, Mode=TwoWay}" Width="80" Height="80"></ProgressRing>
             <StackPanel>
                 <ListView ItemsSource="{Binding Messages}"
                           IsItemClickEnabled="True"
@@ -54,6 +53,7 @@
                     </ListView.ItemTemplate>
                 </ListView>
             </StackPanel>
+            <ProgressRing Foreground="Yellow" IsActive="{Binding IsLoading, Mode=TwoWay}" Width="80" Height="80"></ProgressRing>
         </Grid>
     </Grid>
 </Page>
