--- a/LANParty/LANParty.Windows/Pages/ManageApplicationsPage.xaml
+++ b/LANParty/LANParty.Windows/Pages/ManageApplicationsPage.xaml
@@ -39,7 +39,6 @@
         </Grid>
 
         <Grid Grid.Row="1">
-            <ProgressRing IsActive="{Binding IsLoading, Mode=TwoWay}" Width="80" Height="80"></ProgressRing>
             <StackPanel>
                 <TextBlock Name="log"></TextBlock>
                 <ListView ItemTemplate="{StaticResource BasicUserListViewTemplate}"
@@ -52,6 +51,7 @@
                           Holding="ListView_Holding">
                 </ListView>
             </StackPanel>
+            <ProgressRing  Foreground="Yellow" IsActive="{Binding IsLoading, Mode=TwoWay}" Width="80" Height="80"></ProgressRing>
         </Grid>
         
     </Grid>
