--- a/LANParty/LANParty.Windows/Pages/PartiesSearch.xaml
+++ b/LANParty/LANParty.Windows/Pages/PartiesSearch.xaml
@@ -39,15 +39,15 @@
         </Grid>
         
         <Grid Grid.Row="1">
-            <ProgressRing IsActive="{Binding IsLoading, Mode=TwoWay}" Width="80" Height="80"></ProgressRing>
             <StackPanel>
-                <ListView ItemTemplate="{StaticResource BasicPartyListViewTemaplate}" 
+                <ListView Margin="10 10 0 0" Width="526" HorizontalAlignment="Left" ItemTemplate="{StaticResource BasicPartyListViewTemaplate}" 
                           ItemsSource="{Binding Parties}"
                           IsItemClickEnabled="True"
                           ItemClick="ListView_ItemClick"
                           >
                 </ListView>
             </StackPanel>
+            <ProgressRing  Foreground="Yellow" IsActive="{Binding IsLoading, Mode=TwoWay}" Width="80" Height="80"></ProgressRing>
         </Grid>
         
     </Grid>
